banner component - add colour contrast a11y tests, fix position-fixed styling

--- a/src/components/gcds-banner/gcds-banner.css
+++ b/src/components/gcds-banner/gcds-banner.css
@@ -1,7 +1,7 @@
-:host .banner {
+:host .gcds-banner {
   /* Is Fixed */
   &.is-fixed {
-    position: fixed;
+    position: sticky;
     top: 0;
     width: 100%;
     z-index: 9999;
